Adding Start in Rando 2nd Castle Zone

--- a/index.html
+++ b/index.html
@@ -574,7 +574,22 @@
                 </div>
                 <div class="pure-u-1-2">
                   <input id="startRoomRando-mode" type="checkbox">
-                  <label for="startRoomRando-mode">Starting Zone
+                  <label for="startRoomRando-mode">Starting Zone 1st Castle
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Start in the entrance as usual but after the first Warg, 
+                          you are teleported to a random zone to start the rest of 
+                          your run.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
+                <div class="pure-u-1-2">
+                  <input id="startRoomRando2nd-mode" type="checkbox">
+                  <label for="startRoomRando2nd-mode">Starting Zone 2nd Castle
                     <span class="tooltip-wrapper">
                       <span class="tooltip-indicator">?</span>
                       <span class="tooltip hidden">
@@ -1216,6 +1231,8 @@
     <script src="build/presets/glitchmaster.js"></script>
     <script src="build/presets/mobility.js"></script>
     <script src="build/presets/spellbound.js"></script>
+    <script src="build/presets/chimera.js"></script>
+    <script src="build/presets/battle-mage.js"></script>
     <script src="build/presets/dog-life.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
