Added locations for c2 starting room rando

--- a/index.html
+++ b/index.html
@@ -577,22 +577,7 @@
                         <span>
                           Start in the entrance as usual but after the first Warg, 
                           you are teleported to a random zone to start the rest of 
-                          your run.
-                        </span>
-                      </span>
-                    </span>
-                  </label>
-                </div>
-                <div class="pure-u-1-2">
-                  <input id="startRoomRando2nd-mode" type="checkbox">
-                  <label for="startRoomRando2nd-mode">Starting Zone 2nd Castle
-                    <span class="tooltip-wrapper">
-                      <span class="tooltip-indicator">?</span>
-                      <span class="tooltip hidden">
-                        <span>
-                          Start in the entrance as usual but after the first Warg, 
-                          you are teleported to a random zone to start the rest of 
-                          your run.
+                          your run. (Select both to have full-range starting rando)
                         </span>
                       </span>
                     </span>
@@ -603,6 +588,20 @@
                   <label for="starting-equipment">Starting Equipment</label>
                 </div>
                 <div class="pure-u-1-2">
+                  <input id="startRoomRando2nd-mode" type="checkbox">
+                  <label for="startRoomRando2nd-mode">Starting Zone 2nd Castle
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Start in the entrance as usual but after the first Warg, 
+                          you are teleported to a random zone in second castle to 
+                          start the rest of your run. (Select both to have full-
+                          range starting rando)
+                        </span>
+                      </span>
+                    </span>
+                  </label>
                 </div>
                 <div class="pure-u-1-4">
                   <input id="prologue-rewards" type="checkbox">
