Added code to disable options for certain presets that break those presets

--- a/index.html
+++ b/index.html
@@ -660,6 +660,7 @@
           <li>eldri7ch used Bugfix against Glitch! It's not very effective...</li>
           <h4>Options Changes</h4>
           <li>Separated out Item Name Randomization from Item Stat Randomizer.</li>
+          <li>Disabled certain options for various preset to avoid those options being turned on and breaking the preset.</li>
           <h4>Accessibility / Quality of Life Changes</h4>
           <li>Removed game freeze caused by using too many wing smashes through Rock Knights in Reverce Caverns</li>
         </ul>
