Removed debug from c2SPR, fixed wingsmash palettes, disabled more options from presets

--- a/index.html
+++ b/index.html
@@ -661,6 +661,7 @@
           <h4>Options Changes</h4>
           <li>Separated out Item Name Randomization from Item Stat Randomizer.</li>
           <li>Disabled certain options for various preset to avoid those options being turned on and breaking the preset.</li>
+          <li>Corrected issues with wing smash trail color randomizer to use either a sanctioned palette or simply a new outline color.</li>
           <h4>Accessibility / Quality of Life Changes</h4>
           <li>Removed game freeze caused by using too many wing smashes through Rock Knights in Reverce Caverns</li>
         </ul>
