--- a/index.html
+++ b/index.html
@@ -313,6 +313,23 @@
                     <option value="dark">Dark</option>
                   </select>
                 </div>
+                <div class="pure-u-12-24">
+                  <label for="mapColor">Map Color</label>
+                </div>
+                <div class="pure-u-12-24">
+                  <select id="mapColor" type="checkbox">
+                    <option value="normal">Normal</option>
+                    <option value="blue">Dark Blue</option>
+                    <option value="green">Hunter Green</option>
+                    <option value="red">Crimson</option>
+                    <option value="brown">Brown</option>
+                    <option value="purple">Purple</option>
+                    <option value="grey">Grey</option>
+                    <option value="pink">Pink</option>
+                    <option value="black">Black</option>
+                    <option value="invis">Invisible</option>
+                  </select>
+                </div>
                 <div class="pure-u-1"></div>
                 <div class="pure-u-1-2">
                   <input id="append-seed" type="checkbox">
@@ -663,7 +680,8 @@
           <li>Disabled certain options for various preset to avoid those options being turned on and breaking the preset.</li>
           <li>Corrected issues with wing smash trail color randomizer to use either a sanctioned palette or simply a new outline color.</li>
           <h4>Accessibility / Quality of Life Changes</h4>
-          <li>Removed game freeze caused by using too many wing smashes through Rock Knights in Reverce Caverns</li>
+          <li>Removed game freeze caused by using too many wing smashes through Rock Knights in Reverce Caverns.</li>
+          <li>Added Map Color selector to website.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
