--- a/index.html
+++ b/index.html
@@ -680,6 +680,7 @@
           <li>Disabled certain options for various preset to avoid those options being turned on and breaking the preset.</li>
           <li>Corrected issues with wing smash trail color randomizer to use either a sanctioned palette or simply a new outline color.</li>
           <h4>Accessibility / Quality of Life Changes</h4>
+          <li>Removed game freeze if luck is negative and the game tries to calculate critical damage.</li>
           <li>Removed game freeze caused by using too many wing smashes through Rock Knights in Reverce Caverns.</li>
           <li>Added Map Color selector to website.</li>
         </ul>
