Three Presets added, randomRelic changed, RandomHexChar added
Added new pool shuffle methods including fixing randomRelic.

Added Battle Mage, Chimera, and Timeline presets

--- a/index.html
+++ b/index.html
@@ -671,21 +671,33 @@
         </ul>
         <hr>
         <h2><a name="changelog">Changelog</a></h2>
-        <h3><time>February 10, 2025</time></h3>
+        <h3><time>March 10, 2025</time></h3>
         <ul>
           <h4>Preset Changes</h4>
-          <li>eldri7ch used Bugfix against Glitch! It's not very effective...</li>
-          <h4>Options Changes</h4>
-          <li>Separated out Item Name Randomization from Item Stat Randomizer.</li>
-          <li>Disabled certain options for various preset to avoid those options being turned on and breaking the preset.</li>
-          <li>Corrected issues with wing smash trail color randomizer to use either a sanctioned palette or simply a new outline color.</li>
-          <h4>Accessibility / Quality of Life Changes</h4>
-          <li>Removed game freeze if luck is negative and the game tries to calculate critical damage.</li>
-          <li>Removed game freeze caused by using too many wing smashes through Rock Knights in Reverce Caverns.</li>
-          <li>Added Map Color selector to website.</li>
+          <li>Added Chimera preset.</li>
+          <li>Added Battle Mage preset.</li>
+          <li>Added Timeline preset.</li>
+          <li>Glitch festers like a splinter in the side of bugfixing.</li>
+          <h4>Program Updates</h4>
+          <li>Added new randomizer capability to generate a random hex byte between two values. (Shuffled pool)</li>
+          <li>Updated "randomRelic" writes option to use pool shuffling instead of pure RNG.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
+          <h3><time>February 10, 2025</time></h3>
+          <ul>
+            <h4>Preset Changes</h4>
+            <li>eldri7ch used Bugfix against Glitch! It's not very effective...</li>
+            <h4>Options Changes</h4>
+            <li>Added Castle 2 Starting Area Randomizer.</li>
+            <li>Separated out Item Name Randomization from Item Stat Randomizer.</li>
+            <li>Disabled certain options for various preset to avoid those options being turned on and breaking the preset.</li>
+            <li>Corrected issues with wing smash trail color randomizer to use either a sanctioned palette or simply a new outline color.</li>
+            <h4>Accessibility / Quality of Life Changes</h4>
+            <li>Removed game freeze if luck is negative and the game tries to calculate critical damage.</li>
+            <li>Removed game freeze caused by using too many wing smashes through Rock Knights in Reverce Caverns.</li>
+            <li>Added Map Color selector to website.</li>
+          </ul>
           <h3><time>January 13, 2025</time></h3>
           <ul>
             <h4>Preset Changes</h4>
