Added new presets to website

--- a/index.html
+++ b/index.html
@@ -1277,6 +1277,7 @@
     <script src="build/presets/dog-life.js"></script>
     <script src="build/presets/battle-mage.js"></script>
     <script src="build/presets/chimera.js"></script>
+    <script src="build/presets/timeline.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
