--- a/index.html
+++ b/index.html
@@ -678,6 +678,8 @@
           <li>Added Battle Mage preset.</li>
           <li>Added Timeline preset.</li>
           <li>Glitch festers like a splinter in the side of bugfixing.</li>
+          <h4>Options Changes</h4>
+          <li>Blocked Castle 2 Start for First Castle preset.</li>
           <h4>Program Updates</h4>
           <li>Added new randomizer capability to generate a random hex byte between two values. (Shuffled pool)</li>
           <li>Updated "randomRelic" writes option to use pool shuffling instead of pure RNG.</li>
