Updated Dog Life logic. Updated Index.html

--- a/index.html
+++ b/index.html
@@ -677,6 +677,9 @@
           <li>Added Chimera preset.</li>
           <li>Added Battle Mage preset.</li>
           <li>Added Timeline preset.</li>
+          <li>Added logic for Equipment and Scenic locations for Dog Life.</li>
+          <li>Removed several soft-locks in Dog Life.</li>
+          <li>Fixed some movement bugs and added Out of Logic checks for the tracker for Dog Life.</li>
           <li>Glitch festers like a splinter in the side of bugfixing.</li>
           <h4>Options Changes</h4>
           <li>Blocked Castle 2 Start for First Castle preset.</li>
