Updated balancing issues on Big Toss preset.

--- a/index.html
+++ b/index.html
@@ -680,6 +680,9 @@
           <li>Added logic for Equipment and Scenic locations for Dog Life.</li>
           <li>Removed several soft-locks in Dog Life.</li>
           <li>Fixed some movement bugs and added Out of Logic checks for the tracker for Dog Life.</li>
+          <li>Updated Big Toss preset to remove consumable status from Toadstool and High Potion.</li>
+          <li>Removed Duplicator and added God's Garb as starting equipment in Big Toss.</li>
+          <li>Added an additional Antivenom as replacement for Force of Echo in Big Toss.</li>
           <li>Glitch festers like a splinter in the side of bugfixing.</li>
           <h4>Options Changes</h4>
           <li>Blocked Castle 2 Start for First Castle preset.</li>
