Update Big Toss and Add Guaranteed Drops
Big Toss now accepts poisoned Alucard in the elevator and Guaranteed Drops mode allows the player to get an item drop every kill

--- a/index.html
+++ b/index.html
@@ -620,9 +620,24 @@
                     </span>
                   </label>
                 </div>
-                <div class="pure-u-1-4">
+                <div class="pure-u-1-2">
                   <input id="prologue-rewards" type="checkbox">
                   <label for="prologue-rewards">Prologue Rewards</label>
+                </div>
+                <div class="pure-u-1-2">
+                  <input id="domino-mode" type="checkbox">
+                  <label for="domino-mode">Guaranteed Drops
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Guarantees drops from every enemy that has one. Ring of
+                          Arcana makes them drop their rare item instead of the 
+                          uncommon.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
                 </div>
               </div>
             </fieldset>
