--- a/index.html
+++ b/index.html
@@ -1301,6 +1301,7 @@
     <script src="build/presets/battle-mage.js"></script>
     <script src="build/presets/chimera.js"></script>
     <script src="build/presets/timeline.js"></script>
+    <script src="build/presets/april-fools.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
