alucard and richter palette randomizer
self explanatory

--- a/index.html
+++ b/index.html
@@ -639,6 +639,19 @@
                     </span>
                   </label>
                 </div>
+                <div class="pure-u-1-2">
+                  <input id="alucardPalette-mode" type="checkbox">
+                  <label for="alucardPalette-mode">Alucard Palette Rando
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Randomizes Alucard's Palette using preset parameters.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
               </div>
             </fieldset>
           </div>
