--- a/index.html
+++ b/index.html
@@ -639,6 +639,23 @@
                     </span>
                   </label>
                 </div>
+                <div class="pure-u-1-2">
+                </div>
+                <div class="pure-u-1-2">
+                  <input id="rlbc-mode" type="checkbox">
+                  <label for="rlbc-mode">Reverse Library Card
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Adds a new function to Library Cards. Hold Down while 
+                          using them to take Alucard to the second castle Library 
+                          after Richter is saved.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
               </div>
             </fieldset>
           </div>
@@ -686,27 +703,39 @@
         </ul>
         <hr>
         <h2><a name="changelog">Changelog</a></h2>
-        <h3><time>March 10, 2025</time></h3>
+        <h3><time>April 2, 2025</time></h3>
         <ul>
           <h4>Preset Changes</h4>
-          <li>Added Chimera preset.</li>
-          <li>Added Battle Mage preset.</li>
-          <li>Added Timeline preset.</li>
-          <li>Added logic for Equipment and Scenic locations for Dog Life.</li>
-          <li>Removed several soft-locks in Dog Life.</li>
-          <li>Fixed some movement bugs and added Out of Logic checks for the tracker for Dog Life.</li>
-          <li>Updated Big Toss preset to remove consumable status from Toadstool and High Potion.</li>
-          <li>Removed Duplicator and added God's Garb as starting equipment in Big Toss.</li>
-          <li>Added an additional Antivenom as replacement for Force of Echo in Big Toss.</li>
-          <li>Glitch festers like a splinter in the side of bugfixing.</li>
+          <li>Added Alphabet Soup preset.</li>
+          <li>Let's face it, Glitch is a joke.</li>
           <h4>Options Changes</h4>
-          <li>Blocked Castle 2 Start for First Castle preset.</li>
+          <li>Added Guaranteed Drops Option (3/14/2025).</li>
+          <li>Added Reverse Library Cards Option.</li>
           <h4>Program Updates</h4>
-          <li>Added new randomizer capability to generate a random hex byte between two values. (Shuffled pool)</li>
-          <li>Updated "randomRelic" writes option to use pool shuffling instead of pure RNG.</li>
+          <li>Added a way for the randomizer to start setting aside ISO memory and RAM to execute complex functions in ASM.</li>
+          <li>Now the randomizer loads 14 sectors fropm the ISO automatically. Three are reserved for options, eleven sectors are for presets.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
+          <h3><time>March 10, 2025</time></h3>
+          <ul>
+            <h4>Preset Changes</h4>
+            <li>Added Chimera preset.</li>
+            <li>Added Battle Mage preset.</li>
+            <li>Added Timeline preset.</li>
+            <li>Added logic for Equipment and Scenic locations for Dog Life.</li>
+            <li>Removed several soft-locks in Dog Life.</li>
+            <li>Fixed some movement bugs and added Out of Logic checks for the tracker for Dog Life.</li>
+            <li>Updated Big Toss preset to remove consumable status from Toadstool and High Potion.</li>
+            <li>Removed Duplicator and added God's Garb as starting equipment in Big Toss.</li>
+            <li>Added an additional Antivenom as replacement for Force of Echo in Big Toss.</li>
+            <li>Glitch festers like a splinter in the side of bugfixing.</li>
+            <h4>Options Changes</h4>
+            <li>Blocked Castle 2 Start for First Castle preset.</li>
+            <h4>Program Updates</h4>
+            <li>Added new randomizer capability to generate a random hex byte between two values. (Shuffled pool)</li>
+            <li>Updated "randomRelic" writes option to use pool shuffling instead of pure RNG.</li>
+          </ul>
           <h3><time>February 10, 2025</time></h3>
           <ul>
             <h4>Preset Changes</h4>
