--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="magicmax-mode" type="checkbox">
-                  <label for="magicmax-mode">Magic Vessels
+                  <input id="alucardPalette-mode" type="checkbox">
+                  <label for="alucardPalette-mode">Alucard Palette
                     <span class="tooltip-wrapper">
                       <span class="tooltip-indicator">?</span>
                       <span class="tooltip hidden">
                         <span>
-                          Replace Heart Max Up with Magic Max Up.
+                          Randomizes Alucard's Palette amongst pre-set colors.
                         </span>
                       </span>
                     </span>
@@ -404,6 +404,23 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
+                  <input id="magicmax-mode" type="checkbox">
+                  <label for="magicmax-mode">Magic Vessels
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Replace Heart Max Up with Magic Max Up.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
+                <div class="pure-u-1-2">
+                  <input id="show-spoilers" type="checkbox">
+                  <label for="show-spoilers">Show Spoilers</label>
+                </div>
+                <div class="pure-u-1-2">
                   <input id="antifreeze-mode" type="checkbox">
                   <label for="antifreeze-mode">Anti-Freeze
                     <span class="tooltip-wrapper">
@@ -418,8 +435,8 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="show-spoilers" type="checkbox">
-                  <label for="show-spoilers">Show Spoilers</label>
+                  <input id="show-relics" type="checkbox">
+                  <label for="show-relics">Show Relic Locations</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="mypurse-mode" type="checkbox">
@@ -435,8 +452,8 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="show-relics" type="checkbox">
-                  <label for="show-relics">Show Relic Locations</label>
+                  <input id="show-solutions" type="checkbox">
+                  <label for="show-solutions">Show solutions</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="iws-mode" type="checkbox">
@@ -452,8 +469,8 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="show-solutions" type="checkbox">
-                  <label for="show-solutions">Show solutions</label>
+                  <input id="enemy-drops" type="checkbox">
+                  <label for="enemy-drops">Enemy Drops</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="fastwarp-mode" type="checkbox">
@@ -469,8 +486,8 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="enemy-drops" type="checkbox">
-                  <label for="enemy-drops">Enemy Drops</label>
+                  <input id="stats" type="checkbox">
+                  <label for="stats">Item stats</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="noprologue-mode" type="checkbox">
@@ -487,8 +504,17 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="stats" type="checkbox">
-                  <label for="stats">Item stats</label>
+                  <input id="itemnamerando-mode" type="checkbox">
+                  <label for="itemnamerando-mode">Item stats names randomized
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Randomize item names when using Item Stat Rando.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="unlocked-mode" type="checkbox">
@@ -506,13 +532,14 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="itemnamerando-mode" type="checkbox">
-                  <label for="itemnamerando-mode">Item stats names randomized
+                  <input id="turkey-mode" type="checkbox">
+                  <label for="turkey-mode">Turkey Mode
                     <span class="tooltip-wrapper">
                       <span class="tooltip-indicator">?</span>
                       <span class="tooltip hidden">
                         <span>
-                          Randomize item names when using Item Stat Rando.
+                          Replaces the subweapons in the glass vats at Alchemy Lab 
+                          and Black Marble Gallery with useless turkeys.
                         </span>
                       </span>
                     </span>
@@ -534,18 +561,8 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="turkey-mode" type="checkbox">
-                  <label for="turkey-mode">Turkey Mode
-                    <span class="tooltip-wrapper">
-                      <span class="tooltip-indicator">?</span>
-                      <span class="tooltip hidden">
-                        <span>
-                          Replaces the subweapons in the glass vats at Alchemy Lab 
-                          and Black Marble Gallery with useless turkeys.
-                        </span>
-                      </span>
-                    </span>
-                  </label>
+                  <input id="music" type="checkbox">
+                  <label for="music">Music Randomizer</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="enemyStatRando-mode" type="checkbox">
@@ -563,8 +580,8 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="music" type="checkbox">
-                  <label for="music">Music Randomizer</label>
+                  <input id="item-locations" type="checkbox">
+                  <label for="item-locations">Item locations</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="shopPriceRando-mode" type="checkbox">
@@ -582,8 +599,8 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="item-locations" type="checkbox">
-                  <label for="item-locations">Item locations</label>
+                  <input id="starting-equipment" type="checkbox" disabled>
+                  <label for="starting-equipment">Starting Equipment</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="startRoomRando-mode" type="checkbox">
@@ -601,8 +618,8 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="starting-equipment" type="checkbox" disabled>
-                  <label for="starting-equipment">Starting Equipment</label>
+                  <input id="prologue-rewards" type="checkbox">
+                  <label for="prologue-rewards">Prologue Rewards</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="startRoomRando2nd-mode" type="checkbox">
@@ -621,8 +638,6 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
-                  <input id="prologue-rewards" type="checkbox">
-                  <label for="prologue-rewards">Prologue Rewards</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="domino-mode" type="checkbox">
@@ -707,11 +722,14 @@
         <ul>
           <h4>Preset Changes</h4>
           <li>Added Alphabet Soup preset.</li>
-          <li>Let's face it, Glitch is a joke.</li>
+          <li>Datedupay Litchgay Ogiclay.</li>
           <h4>Options Changes</h4>
           <li>Added Guaranteed Drops Option (3/14/2025).</li>
           <li>Added Reverse Library Cards Option.</li>
+          <li>Added Alucard Palette Randomizer Option.</li>
+          <li>Added Richter Palette Randomizer to Color Randomizer.</li>
           <h4>Program Updates</h4>
+          <li>Fix an issue that prevented SOTN.io from generating seeds after a previous seed was downloaded.</li>
           <li>Added a way for the randomizer to start setting aside ISO memory and RAM to execute complex functions in ASM.</li>
           <li>Now the randomizer loads 14 sectors fropm the ISO automatically. Three are reserved for options, eleven sectors are for presets.</li>
         </ul>
