Increased the Player Limit in Leaderboards to 20. Added Match Count to the table for Elo.

--- a/community.html
+++ b/community.html
@@ -28,7 +28,7 @@
                     <th scope="col">Ranking</th>
                     <th scope="col">Player Name</th>
                     <th scope="col" id="tableTimeElo">Elo</th>
-                    <th scope="col" id="seedColumn" class="d-none">Seed</th>
+                    <th scope="col" id="seedColumn">Matches</th>
                 </tr>
             </thead>
             <tbody id="leaderboardTable">
