--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
     <link rel="stylesheet" href="static/css/randomizations.css">
   </head>
   <body>
+    <div class="navbar">
+      <ul class="nav-links">
+          <li class="nav-item"><a href="#">Randomizer</a></li>
+          <li class="nav-item"><a href="/faq">FAQ</a></li>
+          <li class="nav-item"><a href="https://ppf.sotn.io">PPF Patcher</a></li>
+          <li class="nav-item"><a href="community.html">Leaderboards</a></li>
+          <li class="nav-item dropdown">
+              <a href="#">Tools ▼</a>
+              <div class="dropdown-content">
+                  <a href="https://github.com/LuciaRolon/SotNRandomizerLauncher/releases">Randomizer Launcher</a>
+                  <a href="https://taliczealot.github.io/#/apps/sotnrandotools">Rando Tools</a>
+                  <a href="https://github.com/MottZilla/BountyHunterTool/releases/">Bounty Hunter Tool</a>
+              </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a href="#">Community & News ▼</a>
+            <div class="dropdown-content">
+                <a href="https://discord.gg/dzbKhQDjrs">Long Library Discord</a>
+                <a href="https://www.symphonyrando.fun">Knowledge Database (sr.f)</a>
+            </div>
+        </li>
+      </ul>
+    </div>
+
     <div id="version"></div>
     <main>
       <div id="content" class="pure-u-lg-20-24 pure-u-xl-19-24 pure-u-xxl-18-24">
