added New Goals options
added New Goals options allowing players to change the goals of the randomizer

--- a/index.html
+++ b/index.html
@@ -354,6 +354,17 @@
                     <option value="invis">Invisible</option>
                   </select>
                 </div>
+                <div class="pure-u-12-24">
+                  <label for="newGoals">Change Goals</label>
+                </div>
+                <div class="pure-u-12-24">
+                  <select id="newGoals" type="checkbox">
+                    <option value="default">Default</option>
+                    <option value="allBoss">All Bosses</option>
+                    <option value="allRelic">All Relics</option>
+                    <option value="abrsr">All Bosses & Relics</option>
+                  </select>
+                </div>
                 <div class="pure-u-1"></div>
                 <div class="pure-u-1-2">
                   <input id="append-seed" type="checkbox">
