Update index.html and support for options with new vanilla preset

--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,7 @@
     <script src="build/presets/battle-mage.js"></script>
     <script src="build/presets/chimera.js"></script>
     <script src="build/presets/timeline.js"></script>
+    <script src="build/presets/vanilla.js"></script>
     <script src="build/presets/april-fools.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
