Tracker Flags for new Goals
Added flags for Tracker to detect when a seed has bosses or ABRSR as a goal.

--- a/index.html
+++ b/index.html
@@ -364,6 +364,16 @@
                     <option value="allRelic">All Relics</option>
                     <option value="abrsr">All Bosses & Relics</option>
                   </select>
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Changes the goals of the seed but does not affect relic distribution.
+                        All Bosses requires all 20 bosses to be defeated and Richter to be saved.
+                        All Relics requires all 28 relics from the North American PSX version of the game.
+                      </span>
+                    </span>
+                  </span>
                 </div>
                 <div class="pure-u-1"></div>
                 <div class="pure-u-1-2">
@@ -756,9 +766,13 @@
         <h3><time>April 2, 2025</time></h3>
         <ul>
           <h4>Preset Changes</h4>
-          <li>Added Alphabet Soup preset.</li>
+          <li>Added Vanilla preset.</li>
           <li>Datedupay Litchgay Ogiclay.</li>
           <h4>Options Changes</h4>
+          <li>Added new option to change seed goals.</li>
+          <li>♦ All Bosses changes the goal to defeat all bosses listed on the time attack table in the vanilla game.</li>
+          <li>♦ All Relics changes the goal to collect all relics in the North American version of the vanilla game.</li>
+          <li>♦ All Bosses and Relics changes the goal to defeat all bosses and collect all relics as above.</li>
           <li>Added Guaranteed Drops Option (3/14/2025).</li>
           <li>Added Reverse Library Cards Option.</li>
           <li>Added Alucard Palette Randomizer Option.</li>
