--- a/index.html
+++ b/index.html
@@ -763,6 +763,9 @@
         </ul>
         <hr>
         <h2><a name="changelog">Changelog</a></h2>
+        <h3><time>April 3, 2025</time></h3>
+          <h4>Hotfix</h4>
+          <li>Fixed Starting Room Randomizer execution from Preset Files.</li>
         <h3><time>April 2, 2025</time></h3>
         <ul>
           <h4>Preset Changes</h4>
